# obs-plugintemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  buildspec.json  vcpkg.json
.github/workflows/: release-macos-cloud.yml
data/locale/: en-US.ini  fr-FR.ini
installer/: obs-face-emotion-filter.iss
src/: emotion_mapping.cpp  emotion_mapping.hpp  face_emotion_filter.cpp  face_emotion_filter.hpp  inference_worker.cpp  inference_worker.hpp  plugin-main.cpp  plugin-support.c.in  plugin-support.h  tracker.cpp  tracker.hpp
tools/: package-export-macos.ps1  package-export.ps1
